# sonic-buildimage

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  Makefile.cache  slave.mk
bazel/hub/: BUILD.bazel  go.mod  go.sum
dockers/docker-base-trixie/: BUILD.bazel  base_trixie.MODULE.bazel  pip_annotations.toml  pyproject.toml
dockers/docker-bmp-watchdog/: BUILD.bazel
dockers/docker-bmp-watchdog/watchdog/: BUILD.bazel
dockers/docker-config-engine-trixie/: BUILD.bazel  bitarray.BUILD
dockers/docker-dash-ha/: BUILD.bazel
dockers/docker-database/: BUILD.bazel
dockers/docker-dhcp-relay/: BUILD.bazel
dockers/docker-eventd/: BUILD.bazel  render_rsyslog_conf.py
dockers/docker-fpm-frr/: BUILD.bazel
dockers/docker-gnmi-sidecar/: BUILD.bazel
dockers/docker-gnmi-watchdog/: BUILD.bazel
dockers/docker-gnmi-watchdog/watchdog/: BUILD.bazel
dockers/docker-lldp/: BUILD.bazel
dockers/docker-macsec/: BUILD.bazel
dockers/docker-mux/: BUILD.bazel
dockers/docker-nat/: BUILD.bazel
dockers/docker-orchagent/: BUILD.bazel
dockers/docker-platform-monitor/: BUILD.bazel  thrift_fastbinary.BUILD
dockers/docker-restapi-sidecar/: BUILD.bazel
dockers/docker-router-advertiser/: BUILD.bazel
dockers/docker-sflow/: BUILD.bazel
dockers/docker-snmp/: BUILD.bazel
dockers/docker-sonic-bmp/: BUILD.bazel
dockers/docker-sonic-gnmi/: BUILD.bazel
dockers/docker-sonic-mgmt-framework/: BUILD.bazel
dockers/docker-sonic-otel/: BUILD.bazel
dockers/docker-swss-layer-trixie/: BUILD.bazel
dockers/docker-sysmgr/: BUILD.bazel
dockers/docker-teamd/: BUILD.bazel
docs/: dhcprelay-migration.md  migration-inventory.md  sonic-mgmt-common-migration.md
files/build_templates/: BUILD.bazel
files/image_config/monit/: BUILD.bazel
files/image_config/sysctl/: BUILD.bazel
files/scripts/: BUILD.bazel
platform/pddf/platform-api-pddf-base/: BUILD.bazel  MODULE.bazel
platform/vs/docker-dash-engine/: BUILD.bazel
platform/vs/docker-gbsyncd-vs/: BUILD.bazel
platform/vs/docker-syncd-vs/: BUILD.bazel
scripts/: workspace_status.sh
src/dash-sai/DASH-bazel/: BUILD.bazel  MODULE.bazel  dash.BUILD  deb_headers.bzl  run_sai_gen.py  sai_submodule.BUILD
src/iproute2/: BUILD.bazel  MODULE.bazel
src/isc-dhcp/: .gitignore  BUILD.bazel  MODULE.bazel  bind.BUILD  isc-dhcp.BUILD
src/libnl3/: .gitignore  BUILD.bazel  MODULE.bazel  libnl3.BUILD
src/libraries/sonic-fib/: BUILD.bazel  MODULE.bazel
src/libteam/: .gitignore  BUILD.bazel  MODULE.bazel  config.h.tpl  libteam.BUILD
src/libyang3/: .gitignore  BUILD.bazel  MODULE.bazel  libyang3.BUILD.bazel
src/libyang3-py3/: .gitignore  BUILD.bazel  MODULE.bazel  cffi_codegen.bzl  headers_tree.bzl  libyang3_py3.BUILD  pyproject.toml
src/libyang3/patch/: BUILD.bazel
src/lldpd/: .gitignore  BUILD.bazel  MODULE.bazel  lldpd.BUILD  lldpd_debian.BUILD
src/lldpd/debian_patches/: 0002-daemon-fix-read-overflow-when-parsing-CDP-addresses.patch
src/lm-sensors/: .gitignore  BUILD.bazel  MODULE.bazel
src/p4lang/: BUILD.bazel  MODULE.bazel  sysroot.bzl
src/p4lang/bmv2_patches/: add-cstdint.patch
src/redis-dump-load/: BUILD.bazel  MODULE.bazel  redis-dump-load.BUILD
src/redis-dump-load-bazel/: BUILD.bazel  MODULE.bazel  redis-dump-load.BUILD
src/scapy-bazel/: .gitignore  BUILD.bazel  MODULE.bazel  scapy.BUILD
src/sflow/: BUILD.bazel  MODULE.bazel  hsflowd.BUILD  psample.BUILD  sflowtool.BUILD
src/socat/: BUILD.bazel  MODULE.bazel
src/sonic-bgpcfgd/: BUILD.bazel  MODULE.bazel
src/sonic-bmpcfgd/: BUILD.bazel  MODULE.bazel
src/sonic-config-engine/: BUILD.bazel  MODULE.bazel
src/sonic-containercfgd/: BUILD.bazel  MODULE.bazel
src/sonic-ctrmgrd/ctrmgr/: BUILD.bazel
src/sonic-dhcp-utilities/: .gitignore  BUILD.bazel  MODULE.bazel
src/sonic-eventd/: BUILD.bazel  MODULE.bazel
src/sonic-fips/: .gitignore  BUILD.bazel  MODULE.bazel  external_deb.bzl
src/sonic-frr/: BUILD.bazel  MODULE.bazel  clippy_helpers.bzl  frr_patched.BUILD.bazel  frr_patched.bzl  protobuf_c-absl-include-quote.patch  protobuf_c.BUILD
src/sonic-frr-mgmt-framework/: BUILD.bazel  MODULE.bazel
src/sonic-frr/debian_pkg/: BUILD.bazel  conffiles  postinst  postrm  preinst  prerm  shlibs
src/sonic-frr/patch/: BUILD.bazel
src/sonic-py-common/: BUILD.bazel  MODULE.bazel
src/sonic-supervisord-utilities/: BUILD.bazel  MODULE.bazel
src/sonic-supervisord-utilities-rs/: BUILD.bazel  MODULE.bazel
src/sonic-sysmgr/: BUILD.bazel  MODULE.bazel
src/sonic-sysmgr/gnoi-bazel/: BUILD.bazel  MODULE.bazel  gnoi.BUILD
src/sonic-yang-mgmt/: BUILD.bazel  MODULE.bazel
src/sonic-yang-models/: BUILD.bazel  MODULE.bazel  pyproject.toml
src/sonic-yang-models/tools/: render_yang_template.py
src/system-health/: BUILD.bazel  MODULE.bazel
src/wpasupplicant/: BUILD.bazel  MODULE.bazel
