module(name = "sonic-buildimage")

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "grpc", version = "1.71.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_go", version = "0.60.0.sonic-patched", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "tar.bzl", version = "0.8.1")
git_override(
    module_name = "tar.bzl",
    commit = "9b76e660363ab2465d89d3aadbbc1f7afa02e65c",
    remote = "https://github.com/bazel-contrib/tar.bzl",
)

# The BCR swig overlay ships Lib/go/** on disk but only exposes lib_python /
# lib_java filegroups. sonic-gnmi's swsscommon SWIG-Go binding needs a lib_go
# filegroup (Lib/go + std/typemaps) on SWIG_LIB; add it via a patch.
single_version_override(
    module_name = "swig",
    patch_strip = 1,
    patches = ["//sonic_rules/swig:add_lib_go.patch"],
    version = "4.1.0",
)

# Register extension so that we can use bsdtar in genrules.
toolchains = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains")
use_repo(toolchains, "bsd_tar_toolchains")

register_toolchains("@bsd_tar_toolchains//:all")

# --- Rust ---
# rules_rust registration must be in the root MODULE.bazel because
# register_toolchains only takes effect from the root module; leaf modules
# that produce Rust artifacts (sonic-swss-common Rust crates,
# sonic-supervisord-utilities-rs) rely on this toolchain being present.
# Rust 1.86.0 is the version verified by the upstream sonic-swss-common
# workspace. aarch64-unknown-linux-gnu is added as an
# extra target triple so we can cross-compile to arm64 SONiC images.
bazel_dep(name = "rules_rust", version = "0.61.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = ["aarch64-unknown-linux-gnu"],
    versions = ["1.86.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "watchdog_crates",
    cargo_lockfile = "//dockers/docker-gnmi-watchdog/watchdog:Cargo.lock",
    manifests = ["//dockers/docker-gnmi-watchdog/watchdog:Cargo.toml"],
)
crate.from_cargo(
    name = "bmp_watchdog_crates",
    cargo_lockfile = "//dockers/docker-bmp-watchdog/watchdog:Cargo.lock",
    manifests = ["//dockers/docker-bmp-watchdog/watchdog:Cargo.toml"],
)
use_repo(crate, "bmp_watchdog_crates", "watchdog_crates")

bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "rules_distroless", version = "0.0.0", repo_name = "rules_deb")
git_override(
    module_name = "rules_distroless",
    commit = "579be0a0adcf7945f354fde25af382614126900e",
    remote = "https://github.com/songqing-sq/rules_distroless.git",
)

bazel_dep(name = "aspect_rules_py", version = "1.11.7")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.13.4",
)
python.toolchain(python_version = "3.11.3")

bazel_dep(name = "sonic-build-infra", version = "0.0.0", repo_name = "sonic_build_infra")
local_path_override(
    module_name = "sonic-build-infra",
    path = "sonic_rules",
)

register_toolchains(
    "@sonic_build_infra//toolchains/gcc:linux_x86_64",
    "@sonic_build_infra//toolchains/gcc:cross_aarch64",
)

bazel_dep(name = "libnl3", version = "3.7.0")
local_path_override(
    module_name = "libnl3",
    path = "src/libnl3",
)

bazel_dep(name = "libteam", version = "1.31-1")
local_path_override(
    module_name = "libteam",
    path = "src/libteam",
)

bazel_dep(name = "libyang3", version = "3.12.2")
local_path_override(
    module_name = "libyang3",
    path = "src/libyang3",
)

bazel_dep(name = "libyang3-py3", version = "3.1.0")
local_path_override(
    module_name = "libyang3-py3",
    path = "src/libyang3-py3",
)

bazel_dep(name = "sonic-fib", version = "1.0.0")
local_path_override(
    module_name = "sonic-fib",
    path = "src/libraries/sonic-fib",
)

bazel_dep(name = "sonic-frr", version = "10.5.4-sonic-0")
local_path_override(
    module_name = "sonic-frr",
    path = "src/sonic-frr",
)

bazel_dep(name = "sonic-yang-models", version = "1.0")
local_path_override(
    module_name = "sonic-yang-models",
    path = "src/sonic-yang-models",
)

bazel_dep(name = "sonic-yang-mgmt", version = "1.0")
local_path_override(
    module_name = "sonic-yang-mgmt",
    path = "src/sonic-yang-mgmt",
)

bazel_dep(name = "sonic-swss-common", version = "1.0.0")
local_path_override(
    module_name = "sonic-swss-common",
    path = "src/sonic-swss-common",
)

bazel_dep(name = "sonic-eventd", version = "1.0.0-0")
local_path_override(
    module_name = "sonic-eventd",
    path = "src/sonic-eventd",
)

bazel_dep(name = "dhcpmon", version = "1.0.0-0")
local_path_override(
    module_name = "dhcpmon",
    path = "src/dhcpmon",
)

bazel_dep(name = "sonic-supervisord-utilities-rs", version = "1.0.0")
local_path_override(
    module_name = "sonic-supervisord-utilities-rs",
    path = "src/sonic-supervisord-utilities-rs",
)

bazel_dep(name = "sonic-dash-ha", version = "1.0.0")
local_path_override(
    module_name = "sonic-dash-ha",
    path = "src/sonic-dash-ha",
)

bazel_dep(name = "redis-dump-load-py3", version = "1.1")
local_path_override(
    module_name = "redis-dump-load-py3",
    path = "src/redis-dump-load-bazel",
)

bazel_dep(name = "sonic-py-swsssdk", version = "2.0.1")
local_path_override(
    module_name = "sonic-py-swsssdk",
    path = "src/sonic-py-swsssdk",
)

bazel_dep(name = "sonic-py-common", version = "1.0")
local_path_override(
    module_name = "sonic-py-common",
    path = "src/sonic-py-common",
)

bazel_dep(name = "sonic-config-engine", version = "1.0")
local_path_override(
    module_name = "sonic-config-engine",
    path = "src/sonic-config-engine",
)

bazel_dep(name = "sonic-platform-common", version = "1.0")
local_path_override(
    module_name = "sonic-platform-common",
    path = "src/sonic-platform-common",
)

bazel_dep(name = "sonic-platform-pddf-common", version = "1.0")
local_path_override(
    module_name = "sonic-platform-pddf-common",
    path = "platform/pddf/platform-api-pddf-base",
)

bazel_dep(name = "sonic-utilities", version = "1.2")
local_path_override(
    module_name = "sonic-utilities",
    path = "src/sonic-utilities",
)

bazel_dep(name = "sonic-host-services", version = "1.0")
local_path_override(
    module_name = "sonic-host-services",
    path = "src/sonic-host-services",
)

bazel_dep(name = "sonic-containercfgd", version = "1.0")
local_path_override(
    module_name = "sonic-containercfgd",
    path = "src/sonic-containercfgd",
)

bazel_dep(name = "sonic-supervisord-utilities", version = "1.0")
local_path_override(
    module_name = "sonic-supervisord-utilities",
    path = "src/sonic-supervisord-utilities",
)

bazel_dep(name = "sonic-platform-daemons", version = "1.0")
local_path_override(
    module_name = "sonic-platform-daemons",
    path = "src/sonic-platform-daemons",
)

bazel_dep(name = "system-health", version = "1.0")
local_path_override(
    module_name = "system-health",
    path = "src/system-health",
)

bazel_dep(name = "lm-sensors", version = "3.6.0-7.1")
local_path_override(
    module_name = "lm-sensors",
    path = "src/lm-sensors",
)

bazel_dep(name = "asyncsnmp", version = "2.1.0")
local_path_override(
    module_name = "asyncsnmp",
    path = "src/sonic-snmpagent",
)

bazel_dep(name = "sonic-dash-api", version = "1.0.0")
local_path_override(
    module_name = "sonic-dash-api",
    path = "src/sonic-dash-api",
)

bazel_dep(name = "sonic-swss", version = "1.0.0")
local_path_override(
    module_name = "sonic-swss",
    path = "src/sonic-swss",
)

bazel_dep(name = "socat", version = "1.8.0.3-1")
local_path_override(
    module_name = "socat",
    path = "src/socat",
)

bazel_dep(name = "lldpd", version = "1.0.16-1+deb12u1")
local_path_override(
    module_name = "lldpd",
    path = "src/lldpd",
)

bazel_dep(name = "iproute2", version = "6.15.0-1")
local_path_override(
    module_name = "iproute2",
    path = "src/iproute2",
)

bazel_dep(name = "sonic-fips", version = "1.9.4")
local_path_override(
    module_name = "sonic-fips",
    path = "src/sonic-fips",
)

bazel_dep(name = "scapy", version = "2.6.1.dev0")
local_path_override(
    module_name = "scapy",
    path = "src/scapy-bazel",
)

bazel_dep(name = "sonic-dbsyncd", version = "2.0.0")
local_path_override(
    module_name = "sonic-dbsyncd",
    path = "src/sonic-dbsyncd",
)

bazel_dep(name = "sonic-sairedis", version = "1.0.0")
local_path_override(
    module_name = "sonic-sairedis",
    path = "src/sonic-sairedis",
)

# SAI is fetched from the opencomputeproject/SAI v1.18.1 GitHub tarball via
# sonic_http_archive; the wrapper module lives in src/sonic-sairedis/SAI-bazel
# so that the SAI git submodule tree stays free of Bazel files (SAI is
# upstream-maintained and cannot host our BUILD files). See
# src/sonic-sairedis/SAI-bazel/MODULE.bazel.
bazel_dep(name = "sai", version = "0.0.0")
local_path_override(
    module_name = "sai",
    path = "src/sonic-sairedis/SAI-bazel",
)

# sonic-mgmt-framework and sonic-gnmi both bazel_dep on sonic-mgmt-common, but
# local_path_override is only honored from the ROOT module, so the root must own
# it here even though nothing in the root depends on it directly.
bazel_dep(name = "sonic-mgmt-common", version = "1.0.0", repo_name = "sonic_mgmt_common")
local_path_override(
    module_name = "sonic-mgmt-common",
    path = "src/sonic-mgmt-common",
)

bazel_dep(name = "sonic-mgmt-framework", version = "1.0.0", repo_name = "sonic_mgmt_framework")
local_path_override(
    module_name = "sonic-mgmt-framework",
    path = "src/sonic-mgmt-framework",
)

bazel_dep(name = "sonic-gnmi", version = "0.1", repo_name = "sonic_gnmi")
local_path_override(
    module_name = "sonic-gnmi",
    path = "src/sonic-gnmi",
)

bazel_dep(name = "dhcprelay", version = "1.0.0-0")
local_path_override(
    module_name = "dhcprelay",
    path = "src/dhcprelay",
)

bazel_dep(name = "isc-dhcp", version = "4.4.3-P1-2", repo_name = "isc_dhcp")
local_path_override(
    module_name = "isc-dhcp",
    path = "src/isc-dhcp",
)

bazel_dep(name = "sonic-dhcp-utilities", version = "1.0")
local_path_override(
    module_name = "sonic-dhcp-utilities",
    path = "src/sonic-dhcp-utilities",
)

bazel_dep(name = "sonic-linkmgrd", version = "1.0.0-1")
local_path_override(
    module_name = "sonic-linkmgrd",
    path = "src/linkmgrd",
)

bazel_dep(name = "sonic-bmp", version = "0.1")
local_path_override(
    module_name = "sonic-bmp",
    path = "src/sonic-bmp",
)

bazel_dep(name = "sonic-bmpcfgd-services", version = "1.0")
local_path_override(
    module_name = "sonic-bmpcfgd-services",
    path = "src/sonic-bmpcfgd",
)

bazel_dep(name = "sonic-bgpcfgd", version = "1.0")
local_path_override(
    module_name = "sonic-bgpcfgd",
    path = "src/sonic-bgpcfgd",
)

bazel_dep(name = "sonic-frr-mgmt-framework", version = "1.0")
local_path_override(
    module_name = "sonic-frr-mgmt-framework",
    path = "src/sonic-frr-mgmt-framework",
)

bazel_dep(name = "sonic-sysmgr", version = "1.0.0")
local_path_override(
    module_name = "sonic-sysmgr",
    path = "src/sonic-sysmgr",
)

bazel_dep(name = "gnoi", version = "0.0.0")
local_path_override(
    module_name = "gnoi",
    path = "src/sonic-sysmgr/gnoi-bazel",
)

# ---- Shared Go third-party hub for the sonic-mgmt-common / sonic-mgmt-framework
# module group. bzlmod only honors module_override/gazelle_override from the ROOT
# module, and a non-isolated go_deps instance is shared across the whole module
# graph. Declaring it here (instead of an isolated instance per submodule) gives
# both modules ONE set of third-party Go repos, so rest_server can link
# sonic-mgmt-common's translib/cvl alongside its own deps without hitting
# "multiple copies of package github.com/golang/glog". Version skews between the
# two go.mods (go-cmp, go-redis/v7) resolve via MVS to the higher (mgmt-common's)
# version, which is what mgmt-common already builds against.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# Root from_file carries the hub's replace pins (glog, gnmi -> the old versions
# mgmt-common's patch/build target). Only the root module's replaces are honored
# during shared-hub resolution; sonic-gnmi's go.mod requires newer glog/gnmi
# that would otherwise win via MVS and break the mgmt-common glog patch.
go_deps.from_file(go_mod = "//bazel/hub:go.mod")

# ygot.patch uses standard `a/generator/generator.go` paths (patch_strip=1).
# ytypes_build.patch is applied after gazelle generates BUILD files, adding the
# @com_github_openconfig_gnmi//value dep gazelle inconsistently dropped from
# ytypes/BUILD.bazel.
go_deps.module_override(
    path = "github.com/openconfig/ygot",
    patches = [
        "@sonic_mgmt_common//patches:ygot/ygot.patch",
        "@sonic_mgmt_common//patches:ytypes_build.patch",
    ],
    patch_strip = 1,
)
go_deps.module_override(
    path = "github.com/openconfig/goyang",
    patches = ["@sonic_mgmt_common//patches:goyang/goyang.patch"],
    patch_strip = 1,
)
go_deps.module_override(
    path = "github.com/antchfx/jsonquery",
    patches = ["@sonic_mgmt_common//patches:jsonquery.patch"],
    patch_strip = 1,
)
go_deps.module_override(
    path = "github.com/antchfx/xmlquery",
    patches = ["@sonic_mgmt_common//patches:xmlquery.patch"],
    patch_strip = 1,
)
go_deps.module_override(
    path = "github.com/antchfx/xpath",
    patches = ["@sonic_mgmt_common//patches:xpath.patch"],
    patch_strip = 1,
)
go_deps.module_override(
    path = "github.com/golang/glog",
    patches = ["@sonic_mgmt_common//patches:glog.patch"],
    patch_strip = 1,
)

# openconfig/gnmi ships pre-generated *.pb.go; disable proto rule generation so
# gazelle emits only a go_library over the checked-in .pb.go.
go_deps.gazelle_override(
    path = "github.com/openconfig/gnmi",
    directives = ["gazelle:proto disable_global"],
)

# openconfig/gnoi and gnsi (consumed by sonic-gnmi) also ship checked-in .pb.go;
# disable proto rules so gazelle doesn't pull rules_proto_grpc.
go_deps.gazelle_override(
    path = "github.com/openconfig/gnoi",
    build_file_generation = "clean",
    directives = ["gazelle:proto disable_global"],
)
go_deps.gazelle_override(
    path = "github.com/openconfig/gnsi",
    build_file_generation = "clean",
    directives = ["gazelle:proto disable_global"],
)

# grpc's authz -> internal/xds/rbac imports github.com/cncf/xds/go/{udpa/type/v1,
# xds/type/v3}. That module resolves to the BCR xds repo (bound to
# com_github_cncf_xds by grpc's C++ bazel_dep), which ships the .pb.go but no Go
# BUILD targets. Force gazelle to generate Go BUILDs so the grpc references
# resolve.
go_deps.gazelle_override(
    path = "github.com/cncf/xds/go",
    build_file_generation = "clean",
    directives = ["gazelle:proto disable_global"],
)

# msteinert/pam (gnmi_server PAM auth) has cgo but its gazelle BUILD only sets
# clinkopts=["-lpam"] with no header path. Patch it (after gazelle) to add a
# cdep on libpam0g-dev so <security/pam_appl.h> resolves and libpam links
# hermetically.
go_deps.module_override(
    path = "github.com/msteinert/pam",
    patches = ["@sonic_gnmi//patches/bazel:msteinert_pam_build.patch"],
    patch_strip = 1,
)

# advancedtls: gnmi_server/clientCertAuth.go calls advancedtls.CheckChainRevocation
# (exported by gnmi's Make patch 0002). Apply the same func-export rename here.
go_deps.module_override(
    path = "google.golang.org/grpc/security/advancedtls",
    patches = ["@sonic_gnmi//patches/bazel:advancedtls_go119.patch"],
    patch_strip = 1,
)

# fsnotify: telemetry.go uses fsnotify.CloseWrite / MovedTo, added by gnmi's Make
# patch 0004 onto fsnotify v1.4.9 (pinned in the hub go.mod).
go_deps.module_override(
    path = "github.com/fsnotify/fsnotify",
    patches = ["@sonic_gnmi//patches/bazel:fsnotify_closewrite.patch"],
    patch_strip = 1,
)

# The root's hub go.mod (//bazel/hub:go.mod) declares glog/gnmi/grpc/fsnotify as
# direct requires (to carry the replace pins); import them so gazelle's use_repo
# tidy check passes. Submodules import the repos they actually reference via
# their own use_repo against this shared instance.
use_repo(
    go_deps,
    "com_github_fsnotify_fsnotify",
    "com_github_golang_glog",
    "com_github_openconfig_gnmi",
    "org_golang_google_grpc",
)

# bitarray 2.8.1 (pinned by sonic-config-engine's install_requires) ships no
# cp313 wheel on PyPI (only up to cp311), so on trixie's Python 3.13 its C
# extensions must be compiled from source. We fetch the sdist here and build it
# with the project's hermetic GCC via cc rules in bitarray.BUILD, instead of
# aspect_rules_py's sdist_build (which uses the interpreter's clang sysconfig
# and a non-hermetic host compiler). Consumed by docker-config-engine-trixie.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bitarray_src",
    build_file = "//dockers/docker-config-engine-trixie:bitarray.BUILD",
    sha256 = "e68ceef35a88625d16169550768fcc8d3894913e363c24ecbf6b8c07eb02c8f3",
    strip_prefix = "bitarray-2.8.1",
    urls = ["https://files.pythonhosted.org/packages/2b/22/b33fdaea9cb2de8a5b00b4b57bc91edef10c7e4aebec1f5c6235d501ba91/bitarray-2.8.1.tar.gz"],
)

# thrift 0.13.0 (pinned by docker-platform-monitor's `pip3 install thrift`) ships
# a pure-Python package plus an OPTIONAL C++ acceleration extension
# `thrift.protocol.fastbinary`. The aspect uv extension classified thrift as
# pure-Python (py3-none-any wheel) and never compiled fastbinary, so pmon would
# silently fall back to the slow pure-Python codec. We fetch the sdist here and
# compile fastbinary with the project's hermetic GCC via cc rules in
# thrift_fastbinary.BUILD (same approach as @bitarray_src), matching the Make
# image which builds it via setuptools. Consumed by docker-platform-monitor.
http_archive(
    name = "thrift_fastbinary_src",
    build_file = "//dockers/docker-platform-monitor:thrift_fastbinary.BUILD",
    sha256 = "9af1c86bf73433afc6010ed376a6c6aca2b54099cc0d61895f640870a9ae7d89",
    strip_prefix = "thrift-0.13.0",
    urls = ["https://files.pythonhosted.org/packages/97/1e/3284d19d7be99305eda145b8aa46b0c33244e4a496ec66440dac19f8274d/thrift-0.13.0.tar.gz"],
)

# OpenTelemetry Collector Contrib prebuilt .deb, fetched from the public GitHub
# releases. Mirrors docker-sonic-otel/Dockerfile.j2's `wget` of
# otelcol-contrib v0.144.0 (arch-specific). docker-sonic-otel cracks the .deb
# and lays its data into the image (see dockers/docker-sonic-otel/BUILD.bazel).
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

_OTEL_VERSION = "0.144.0"

_OTEL_URL_PREFIX = "https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/v" + _OTEL_VERSION

http_file(
    name = "otelcol_contrib_amd64",
    downloaded_file_path = "otelcol-contrib_0.144.0_linux_amd64.deb",
    sha256 = "e83278a763b9c7779f9facf3ac2356b7add8975a5f14d4606a625605f50eee94",
    urls = [_OTEL_URL_PREFIX + "/otelcol-contrib_" + _OTEL_VERSION + "_linux_amd64.deb"],
)

http_file(
    name = "otelcol_contrib_arm64",
    downloaded_file_path = "otelcol-contrib_0.144.0_linux_arm64.deb",
    sha256 = "6e272d1c179d897e8d09877d5589979a01921887aed372447806dc7e1c54be18",
    urls = [_OTEL_URL_PREFIX + "/otelcol-contrib_" + _OTEL_VERSION + "_linux_arm64.deb"],
)

# NOTE: docker-base-trixie's apt sources_list must be the LAST-registered
# so rules_distroless's `sources[suite] = ...` overwrite keeps our
# snapshot.debian.org URIs (which retain older versions) instead of being
# clobbered by other modules' deb.debian.org URIs (which purge older
# versions and 404 on the exact filenames our Packages.xz references).
include("//dockers/docker-base-trixie:base_trixie.MODULE.bazel")
